# opencv_ssd

./: CMakeLists.txt  README.md  main.cpp
